test/errors/scopes7.input.asm

!let var1 = 0
!macro var1() {
	lda #0
}
